<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/text_status"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="#ECEFF1"
            android:gravity="bottom"
            android:textColor="#222222" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_serverIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/serverIP"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/edit_serverIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:ems="10"
            android:hint="@string/hint_text"
            android:inputType="number|numberDecimal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_configuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/select_config"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButton_SDFT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_SDFT" />

        <RadioButton
            android:id="@+id/radioButton_XDFT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_XDFT" />

        <RadioButton
            android:id="@+id/radioButton_XFFT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_XFFT" />

        <RadioButton
            android:id="@+id/radioButton_XFFT_fixed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_XFFT_fixed" />

        <RadioButton
            android:id="@+id/radioButton_INTFFTK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_INTFFTK" />

        <RadioButton
            android:id="@+id/radioButton_INTFFT_SPDF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_INTFFT_SPDF" />

        <RadioButton
            android:id="@+id/radioButton_DBLCLKFFT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_DBLCLKFFT" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_hash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/hash"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <CheckBox
            android:id="@+id/checkBox_hash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_hash" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/button_config"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.5"
            android:text="@string/text_config" />

        <Button
            android:id="@+id/button_save_config"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.5"
            android:text="@string/save_config" />

    </LinearLayout>

</LinearLayout>