<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:weightSum="1">


    <TextView
        android:id="@+id/text_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:textSize="20sp"
        android:textColor="#000000"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/choose_an_activity" />

    <Spinner
        android:id="@+id/spinner_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_weight="0.08" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0.08" />

    <TextView
        android:id="@+id/text_activity2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:textSize="20sp"
        android:textColor="#000000"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/add_activity" />


    <EditText
        android:id="@+id/text_hint_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:textSize="15sp"
        android:theme="@style/EditTextTheme"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_weight="0.08"
        android:hint="@string/type_here" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_weight="0.08" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_data" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />


</LinearLayout>